baked_fluent/tests/ui/03-macro-err.stderr
error: unexpected attribute `invalid_thing` (allowed: path, default_locale)
 --> $DIR/03-macro-err.rs:6:7
  |
6 |     #[invalid_thing("banana")]
  |       ^^^^^^^^^^^^^
